# hellow-world-trident

./: Anchor.toml
.program_client/: Cargo.toml
.program_client/src/: lib.rs
programs/hello_world/src/: lib.rs
trident-tests/fuzz_tests/: Cargo.toml
trident-tests/poc_tests/: Cargo.toml
trident-tests/poc_tests/tests/: test.rs
