[package]
name = "poc_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"

[dev-dependencies.trident-client]
version = "0.6.0"

[dev-dependencies.program_client]
path = "../../.program_client"

[dev-dependencies.hello_world]
path = "../../programs/hello_world"
